Fix invisible membership badge

--- a/addons/better-featured-project/userstyle.css
+++ b/addons/better-featured-project/userstyle.css
@@ -51,6 +51,11 @@
   right: 20px !important;
   z-index: 1;
 }
+#profile-data .box-head .buttons + img {
+  /* membership badge */
+  position: relative;
+  z-index: 1;
+}
 #better-featured-project-name {
   color: white;
   position: absolute;
